--- a/index.html
+++ b/index.html
@@ -1,10 +1,66 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Testing</title>
-  </head>
-  <body>
-    <h1>It works!</h1>
-    <p>This is a test page from Sherwin's portfolio.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sherwin | Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+      line-height: 1.6;
+    }
+    h1, h2 {
+      color: #333;
+    }
+    .skills span {
+      display: inline-block;
+      background: #eee;
+      padding: 6px 12px;
+      margin: 5px;
+      border-radius: 5px;
+    }
+    .section {
+      margin-bottom: 40px;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Sherwin Ortega</h1>
+  <p>Hello! I'm Sherwin, an aspiring web developer and creative problem-solver. This is my personal website to showcase my skills, experience, and projects.</p>
+
+  <div class="section">
+    <h2>About Me</h2>
+    <p>I’m passionate about learning web development, design, and building digital projects. I’m currently self-learning HTML, CSS, and GitHub while creating this portfolio site from scratch!</p>
+  </div>
+
+  <div class="section">
+    <h2>Skills</h2>
+    <div class="skills">
+      <span>HTML</span>
+      <span>CSS</span>
+      <span>Communication</span>
+      <span>Problem Solving</span>
+      <span>Time Management</span>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>Personal Website:</strong> The one you're viewing now, created using HTML and GitHub Pages.</li>
+      <li><strong>Coming soon...</strong></li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Contact</h2>
+    <p>Email: your.email@example.com</p>
+    <p>GitHub: <a href="https://github.com/Shawnnzy" target="_blank">github.com/Shawnnzy</a></p>
+  </div>
+
+</body>
 </html>
