--- a/index.html
+++ b/index.html
@@ -1,66 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sherwin | Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sherwin Ortega | Portfolio</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: auto;
-      padding: 20px;
-      line-height: 1.6;
-    }
-    h1, h2 {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f8f9fa;
       color: #333;
+    }
+    header {
+      background: url('https://static.vecteezy.com/system/resources/previews/001/410/877/non_2x/programming-and-coding-futuristic-banner-vector.jpg') center/cover no-repeat;
+      height: 250px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      text-shadow: 1px 1px 5px black;
+    }
+    header h1 {
+      font-size: 2.8em;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 40px 20px;
+    }
+    h2 {
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 5px;
+      margin-top: 40px;
     }
     .skills span {
       display: inline-block;
-      background: #eee;
-      padding: 6px 12px;
-      margin: 5px;
-      border-radius: 5px;
+      background: #e0e0e0;
+      padding: 8px 14px;
+      margin: 6px;
+      border-radius: 20px;
     }
-    .section {
-      margin-bottom: 40px;
+    ul {
+      padding-left: 20px;
+    }
+    a {
+      color: #007bff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      text-align: center;
+      margin-top: 60px;
+      color: #888;
     }
   </style>
 </head>
 <body>
 
-  <h1>Sherwin Ortega</h1>
-  <p>Hello! I'm Sherwin, an aspiring web developer and creative problem-solver. This is my personal website to showcase my skills, experience, and projects.</p>
+  <header>
+    <h1>Sherwin Ortega</h1>
+  </header>
 
-  <div class="section">
-    <h2>About Me</h2>
-    <p>I’m passionate about learning web development, design, and building digital projects. I’m currently self-learning HTML, CSS, and GitHub while creating this portfolio site from scratch!</p>
-  </div>
+  <div class="container">
 
-  <div class="section">
-    <h2>Skills</h2>
-    <div class="skills">
-      <span>HTML</span>
-      <span>CSS</span>
-      <span>Communication</span>
-      <span>Problem Solving</span>
-      <span>Time Management</span>
-    </div>
-  </div>
+    <section>
+      <h2>About Me</h2>
+      <p>Hi! I'm Sherwin — an aspiring web developer who loves to create things on the internet. I'm currently self-learning HTML, CSS, and GitHub, and this website is part of my growth journey.</p>
+    </section>
 
-  <div class="section">
-    <h2>Projects</h2>
-    <ul>
-      <li><strong>Personal Website:</strong> The one you're viewing now, created using HTML and GitHub Pages.</li>
-      <li><strong>Coming soon...</strong></li>
-    </ul>
-  </div>
+    <section>
+      <h2>Skills</h2>
+      <div class="skills">
+        <span>HTML</span>
+        <span>CSS</span>
+        <span>GitHub</span>
+        <span>Communication</span>
+        <span>Creative Thinking</span>
+      </div>
+    </section>
 
-  <div class="section">
-    <h2>Contact</h2>
-    <p>Email: your.email@example.com</p>
-    <p>GitHub: <a href="https://github.com/Shawnnzy" target="_blank">github.com/Shawnnzy</a></p>
-  </div>
+    <section>
+      <h2>Projects</h2>
+      <ul>
+        <li><strong>Personal Portfolio Website</strong> – You're looking at it now! Made with pure HTML & CSS and hosted on GitHub Pages.</li>
+        <li><em>More coming soon...</em></li>
+      </ul>
+    </section>
 
-</body>
-</html>
+    <section>
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:your.email@example.com">ortegasherwinofficial@gmail.com</a></p>
+      <p>GitHub: <a href="https://github.com/Shawnnzy" target="_blank">github.com/Shawnnzy</a></p>
+      <p>LinkedIn: <a href="#">(link i
