--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <section>
       <h2>About Me</h2>
-      <p>Hi! I'm Sherwin — an aspiring web developer who loves to create things on the internet. I'm currently self-learning HTML, CSS, and GitHub, and this website is part of my growth journey.</p>
+      <p>Hi! I'm Sherwin — an aspiring web developer who loves to create things on the internet. I'm currently self-learning C++, HTML, CSS, and GitHub, and this website is part of my growth journey.</p>
     </section>
 
     <section>
@@ -93,4 +93,14 @@
       <h2>Contact</h2>
       <p>Email: <a href="mailto:your.email@example.com">ortegasherwinofficial@gmail.com</a></p>
       <p>GitHub: <a href="https://github.com/Shawnnzy" target="_blank">github.com/Shawnnzy</a></p>
-      <p>LinkedIn: <a href="#">(link i
+      <p>LinkedIn: <a href="#">(https://www.linkedin.com/in/sherwin-ortega-aa8b09362/)</a></p>
+    </section>
+
+    <footer>
+      &copy; 2025 Sherwin Ortega
+    </footer>
+
+  </div>
+
+</body>
+</html>
