--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 
     <section>
       <h2>About Me</h2>
-      <p>Hi! I'm Sherwin — an aspiring web developer who loves to create things on the internet. I'm currently self-learning C++, HTML, CSS, and GitHub, and this website is part of my growth journey.</p>
+      <p>Hi! I'm Sherwin👋— an aspiring web developer who loves to create things on the internet. I'm currently self-learning C++, HTML, CSS, and GitHub, and this website is part of my growth journey.</p>
     </section>
 
     <section>
-      <h2>Skills</h2>
+      <h2>🛠️ Skills</h2>
       <div class="skills">
         <span>HTML</span>
         <span>CSS</span>
@@ -82,7 +82,7 @@
     </section>
 
     <section>
-      <h2>Projects</h2>
+      <h2>👓Projects</h2>
       <ul>
         <li><strong>Personal Portfolio Website</strong> – You're looking at it now! Made with pure HTML & CSS and hosted on GitHub Pages.</li>
         <li><em>More coming soon...</em></li>
@@ -90,7 +90,7 @@
     </section>
 
     <section>
-      <h2>Contact</h2>
+      <h2>✉️Contact</h2>
       <p>Email: <a href="mailto:your.email@example.com">ortegasherwinofficial@gmail.com</a></p>
       <p>GitHub: <a href="https://github.com/Shawnnzy" target="_blank">github.com/Shawnnzy</a></p>
       <p>LinkedIn: <a href="#">(https://www.linkedin.com/in/sherwin-ortega-aa8b09362/)</a></p>
