--- a/index.html
+++ b/index.html
@@ -3,137 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sherwin Ortega | Virtual Assistant Portfolio</title>
+  <title>My VA Portfolio</title>
   <style>
-    /* General Reset */
+    /* ---------- RESET ---------- */
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      line-height: 1.6;
-      background: #f9fafc;
-      color: #333;
-    }
-    a { color: #0077cc; text-decoration: none; }
-    a:hover { text-decoration: underline; }
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; color: #333; }
 
-    /* Header Section */
-    header {
-      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
-                  url('https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1500&q=80') center/cover no-repeat;
-      height: 300px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      text-align: center;
+    /* ---------- NAVIGATION ---------- */
+    nav {
+      position: fixed;
+      top: 0; left: 0; width: 100%;
+      background: #222; color: #fff;
+      display: flex; justify-content: center;
+      padding: 15px 0; z-index: 1000;
     }
-    header h1 { font-size: 3em; }
-    header p { font-size: 1.2em; margin-top: 10px; }
+    nav ul { list-style: none; display: flex; gap: 25px; }
+    nav ul li a {
+      color: #fff; text-decoration: none; font-weight: 600;
+      transition: color 0.3s ease;
+    }
+    nav ul li a:hover { color: #f39c12; }
 
-    /* Container */
-    .container {
-      width: 90%;
-      max-width: 1000px;
-      margin: 40px auto;
+    /* ---------- SECTIONS ---------- */
+    section {
+      padding: 100px 15%; min-height: 100vh;
+      scroll-margin-top: 80px;
     }
-    section { margin-bottom: 60px; }
-    h2 {
-      font-size: 2em;
-      margin-bottom: 15px;
-      border-bottom: 3px solid #0077cc;
-      display: inline-block;
-      padding-bottom: 5px;
-    }
+    h1, h2 { margin-bottom: 20px; color: #222; }
     p { margin-bottom: 15px; }
 
-    /* Skills / Services */
-    .services, .skills {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-    }
-    .services div, .skills span {
-      flex: 1 1 45%;
-      background: #eef2f7;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .skills span {
-      background: #0077cc;
-      color: white;
-      font-weight: bold;
-      padding: 8px 14px;
-      flex: none;
-    }
-
-    /* Testimonials */
-    .testimonial {
-      background: #fff;
-      padding: 20px;
-      border-left: 5px solid #0077cc;
-      margin-bottom: 20px;
-      border-radius: 5px;
-    }
-
-    /* Pricing */
-    .pricing {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-    .pricing .card {
-      flex: 1 1 30%;
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    .pricing h3 { margin-bottom: 10px; }
-    .pricing p { margin-bottom: 8px; }
-
-    /* Contact */
-    .contact {
-      background: #0077cc;
-      color: white;
-      text-align: center;
-      padding: 40px 20px;
-      border-radius: 10px;
-    }
-    .contact a { color: yellow; font-weight: bold; }
-
-    footer {
-      text-align: center;
-      margin-top: 40px;
-      padding: 20px;
-      color: #888;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Header -->
-  <header>
-    <div>
-      <h1>Sherwin Ortega</h1>
-      <p>Virtual Assistant | Helping Businesses Stay Organized & Grow</p>
-    </div>
-  </header>
-
-  <div class="container">
-
-    <!-- About -->
-    <section>
-      <h2>About Me</h2>
-      <p>Hi! I'm Sherwin, a dedicated Virtual Assistant passionate about helping entrepreneurs and small businesses manage their tasks effectively. I specialize in admin support, social media management, and creative tasks that free up your time so you can focus on growing your business.</p>
-    </section>
-
-    <!-- Services -->
-    <section>
-      <h2>Services Offered</h2>
-      <div class="services">
-        <div><strong>Admin Support</strong><br>Inbox management, scheduling, file organization, and research tasks.</div>
-        <div><strong>Social Media Management</strong><br>Content creation, scheduling, and engagement strategies.</div>
-        <div><strong>Design Support</strong><br>Canva graphics, presentations, and branded materials.</div>
-        <div><strong>Project Manage
+    /* ---------- HERO (Home) ---------- */
+    #home {
+      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://picsum.photos/1600/900?random=2") no-repeat center center/cover;
+      color: #f
