--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </p>
       <a href="#contact" class="btn">Schedule A Discovery Call</a>
     </div>
-    <img src="https://github.com/Shawnnzy/Portfolio/blob/main/images/IMG_20231004_213207_934.jpg" alt="Sherwin VA">
+    <img src="https://raw.githubusercontent.com/Shawnnzy/Portfolio/main/images/IMG_20231004_213207_881.jpg" alt="Sherwin VA">
   </section>
 
   <!-- SUBLINE -->
